--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
     "pug": "^3.0.2",
-    "redis": "^4.0.6"
+    "redis": "^4.0.6",
+    "yarn": "^1.22.18"
   },
   "name": "gyt",
   "version": "0.0.1",
