--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "express": "^4.17.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.2",
     "pug": "^3.0.2",
     "redis": "^4.0.6",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.18"
   },
   "name": "gyt",
